PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/MapOrListExistsConcat.pf
module MapExistsValueList {

    a [Int] = [1]

    b [Int] = [2]

    fun testSomething() : [Int] {

        i [Int] = a ++ b
         
        return i
    }
}