PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/MapExistsKeyList.pf
module MapExistsKeyList {

    fun testSomething() : [Int] {

        i [Int] = @a
         
        return i
    }
}